--- a/html/home.html
+++ b/html/home.html
@@ -4,7 +4,7 @@
         <div id='carouselExampleAutoplaying' class='carousel slide mt-3' data-bs-ride='carousel'>
             <div class='carousel-inner'>
                 <div class='carousel-item active'>
-                    <img src='img/carousel_01.png' class='d-block w-100' alt='Boy Scout 01'>
+                    <img src='img/carousel_01.jpeg' class='d-block w-100' alt='Boy Scout 01'>
                 </div>
                 <div class='carousel-item'>
                     <img src='img/carousel_02.jpeg' class='d-block w-100' alt='Boy Scout 02'>
