--- a/html/home.html
+++ b/html/home.html
@@ -8,6 +8,9 @@
                 </div>
                 <div class='carousel-item'>
                     <img src='img/carousel_02.jpeg' class='d-block w-100' alt='Boy Scout 02'>
+                <div class='carousel-item'>
+                        <img src='img/carousel_03.jpeg' class='d-block w-100' alt='Boy Scout 03'>
+                    </div>
                 </div>
             </div>
             <button class='carousel-control-prev' type='button' data-bs-target='#carouselExampleAutoplaying'
