--- a/html/cart.html
+++ b/html/cart.html
@@ -60,7 +60,7 @@
 
     function removeCartItem(productId) {
         const cartList = document.getElementById('cart-list');
-        const cartItem = document.getElementById(`cart-item-${productId}`);
+        const cartItem = document.getElementById('cart-item-${productId}');
 
         cartList.removeChild(cartItem);
     }
