--- a/html/login.html
+++ b/html/login.html
@@ -1,4 +1,7 @@
-<div class='d-flex justify-content-center' id='login'>
+<div class='d-flex justify-content-center align-items-center flex-column' id='login'>
+    <div class='mb-3'>
+        <img src='img/logo.png' alt='Logo' height='120px'>
+    </div>
     <form class='col-12 col-md-6' id='frm-login'>
         <div class='mt-3' id='frm-login-validation'></div>
 
