--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <body>
     <!-- Navigation Bar -->
-    <nav class='navbar navbar-expand-lg bg-success sticky-top' data-bs-theme='dark'>
+    <nav class='navbar navbar-expand-lg custom-navbar sticky-top' data-bs-theme='dark'>
+
         <div class='container-fluid'>
             <a class='navbar-brand' href='index.html'>
                 <div class='d-flex align-items-center'>
@@ -126,7 +127,19 @@
                 </a>
             </div>
         </div>
+            <div class='col'>
+                <div class='d-flex align-items-center mb-2'>
+                    <!-- Thêm địa chỉ và biểu tượng -->
+                    <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-geo-alt' viewBox='0 0 16 16'>
+                        <path d='M8 0a8 8 0 0 1 8 8c0 6-8 16-8 16S0 14 0 8a8 8 0 0 1 8-8zm0 2a6 6 0 0 0-6 6c0 5.25 6 14 6 14s6-8.75 6-14a6 6 0 0 0-6-6zm0 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4z'/>
+                    </svg>
+                    &nbsp;&nbsp;
+                    <a href='https://maps.app.goo.gl/crfxJm4utEttMCmM7' 
+                    class='link-secondary link-offset-2 link-underline link-underline-opacity-0'>
+                    67 Phan Xích Long, Phường 2, Quận Phú Nhuận, HCMC.
+                </div>
 
+        </div>
         <div class='col d-flex align-items-top justify-content-end'>
             &copy;&nbsp;&nbsp;2023 WOODY shop
         </div>
