--- a/html/add-product.html
+++ b/html/add-product.html
@@ -1,4 +1,7 @@
-<div class='d-flex justify-content-center' id='add-product'>
+<div class='d-flex justify-content-center align-items-center flex-column' id='add-product'>
+      <div class='mb-3'>
+        <img src='img/logo.png' alt='Logo' height='120px'>
+    </div>
     <form class='col-12 col-md-6' id='frm-add-product'>
         <div class='mt-3' id='frm-add-product-validation'></div>
 
