--- a/html/register.html
+++ b/html/register.html
@@ -1,11 +1,14 @@
-<div class='d-flex justify-content-center' id='register'>
-    <form class='col-12 col-md-6' id='frm-register'>
-        <div class='mt-3' id='frm-register-validation'></div>
-
-        <div class='form-floating mt-3'>
-            <input type='email' class='form-control' id='frm-register-email' placeholder='Email' required>
-            <label for='frm-register-email'>Email *</label>
-        </div>
+<div class='d-flex justify-content-center align-items-center flex-column' id='register'>
+    <div class='mb-3'>
+        <img src='img/logo.png' alt='Logo' height='120px'>
+    </div>
+        <form class='col-12 col-md-6' id='frm-register'>
+            <div class='mt-3' id='frm-register-validation'></div>
+    
+            <div class='form-floating mt-3'>
+                <input type='email' class='form-control' id='frm-register-email' placeholder='Email' required>
+                <label for='frm-register-email'>Email *</label>
+            </div>
 
         <div class='form-floating mt-3'>
             <input type='password' class='form-control' id='frm-register-password' placeholder='Password' minlength='6'
@@ -30,7 +33,7 @@
         </div>
 
         <div class='mt-3'>
-            <a href='#' id='link-login'>Already had account?</a>
+            <a href='#' id='link-login'>Already had an account?</a>
         </div>
 
         <div class='text-center mt-3'>
