put .hintrc into project

--- a/html/register.html
+++ b/html/register.html
@@ -60,7 +60,7 @@
         const passwordConfirm = passwordConfirmInput.value;
 
         if (user.password !== passwordConfirm) {
-            displayValidationError(validationId, 'Passwords do not match!');
+            displayValidationError(validationId, 'Password do not match!');
             return;
         }
 
